# Hintas

./: .gitignore  db.sqlite3  index.ipynb  manage.py  pyproject.toml
hintas/: asgi.py  settings.py  urls.py  wsgi.py
home/: admin.py  forms.py  models.py  sorting.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_dronesettings.py  0003_listdata.py
home/templates/: index.html
home/utils/: displace.py  emergency.py  order.py  rebuild.py
