[project]
name = "hintas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainer>=7.8.1",
    "django>=5.1.3",
    "geopandas>=1.0.1",
    "imantics>=0.1.12",
    "imgaug>=0.4.0",
    "ipykernel>=6.29.5",
    "ipython>=8.29.0",
    "keras>=3.6.0",
    "matplotlib>=3.9.2",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "redis>=5.2.0",
    "scikit-image>=0.24.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "setuptools>=75.5.0",
    "simplification>=0.7.13",
]
